--- a/index.html
+++ b/index.html
@@ -11,10 +11,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
-    <script type="text/javascript"> </script> <!-- Jesli brakuje skryptow to psuje sie transition -->
 </head>
 <body>
-    <h1 class="first">Raleway</h1>
-    <h1 class="second">Open sans</h1>
+    <header>
+        <section class="wide__container">
+            <div class="header__logo">BestShop</div>
+            <nav class="header__nav">
+                <ul>
+                    <li class="nav__element"><a href="" class="nav__link">why us</a></li>
+                    <li class="nav__element"><a href="" class="nav__link">benefits</a></li>
+                    <li class="nav__element"><a href="" class="nav__link">prices</a></li>
+                    <li class="nav__element"><a href="" class="nav__link">contact</a></li>
+                </ul>
+            </nav>
+        </section>
+    </header>
+    <section class="opener">
+        <div class="opener__text">
+                <h1>Sell More!</h1>
+                <p class="paragraph">Open shop on our platform and increase your sales</p>
+                <a href="#" class="btn btn__large">Open your shop</a>
+        </div>
+        <div class="opener__image"></div>
+    </section>
+
+    <div class="fake"></div>
+
+
+    <!--powtarzające się rzeczy:
+        header i footer ta sama szerokość
+        reszta w tym samym container, tylko jedne space around inne rozciągnięte
+    -->
+    <script type="text/javascript"> </script> <!-- Jesli brakuje skryptow to psuje sie transition -->
 </body>
 </html>
