--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <section class="wide__container">
+        <section class="container">
             <div class="header__logo">BestShop</div>
             <nav class="header__nav">
                 <ul>
@@ -26,7 +26,7 @@
             </nav>
         </section>
     </header>
-    <section class="opener">
+    <section class="opener container">
         <div class="opener__text">
                 <h1>Sell More!</h1>
                 <p class="paragraph">Open shop on our platform and increase your sales</p>
@@ -34,8 +34,28 @@
         </div>
         <div class="opener__image"></div>
     </section>
+    <section class="statistic container">
+        <h2>The most popular sales platform in country</h2>
+        <article class="statistic__box">
+            <div class="single__stat">
+                <div class="stat__circle"><img src="/img/Person.svg" alt="person icon" class="stat__image"></div>
+                <div class="stat__number">1000000+</div>
+                <div class="stat__paragraph">daily entries</div>
+            </div>
+            <div class="single__stat">
+                <div class="stat__circle"><img src="/img/Eye.svg" alt="eye icon" class="stat__image"></div>
+                <div class="stat__number">2000000+</div>
+                <div class="stat__paragraph">seen products every day</div>
+            </div>
+            <div class="single__stat">
+                <div class="stat__circle"><img src="/img/Catalog.svg" alt="catalog icon" class="stat__image"></div>
+                <div class="stat__number">10000+</div>
+                <div class="stat__paragraph">added posts daily</div>
+            </div>
+        </article>
+    </section>
 
-    <div class="fake"></div>
+
 
 
     <!--powtarzające się rzeczy:
