--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p class="paragraph">Open shop on our platform and increase your sales</p>
                 <a href="#" class="btn btn__large">Open your shop</a>
         </div>
-        <div class="opener__image"></div>
+        <img src="/img/Background.png" alt="background image" class="opener__image">
     </section>
     <section class="statistic container">
         <h2>The most popular sales platform in country</h2>
