benefit container styling

--- a/index.html
+++ b/index.html
@@ -55,13 +55,41 @@
         </article>
     </section>
 
+    <section class="container benefits">
+        <article class="benefit__single benefit--macbook">
+            <div class="benefit__text benefit__text--macbook">
+                <h2>Be always first</h2>
+                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="benefit__image">
+                <img src="/img/Macbook.png" alt="macbook photo">
+            </div>
+        </article>
+        <article class="benefit__single benefit--iphone">
+            <div class="benefit__text benefit__text--iphone">
+                <h2>Be always first</h2>
+                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+            <div class="benefit__image">
+                <img src="/img/iPhone.png" alt="macbook photo">
+            </div>
+        </article>
+        <div class="benefit__double">
+            <article class="benefit__single benefit__single--trumpet">
+                <div class="benefit__text benefit__text--trumpet">
+                    <h2>Be always first</h2>
+                    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </div>
+            </article>
+            <article class="benefit__single benefit__single--trumpet--image">
+                <img src="/img/Trumpet.png" alt="trumpet image" srcset="">
+            </article>
+        </div>
+    </section>
 
 
 
-    <!--powtarzające się rzeczy:
-        header i footer ta sama szerokość
-        reszta w tym samym container, tylko jedne space around inne rozciągnięte
-    -->
+
     <script type="text/javascript"> </script> <!-- Jesli brakuje skryptow to psuje sie transition -->
 </body>
 </html>
