pricing container styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             </div>
         </article>
     </section>
-
     <section class="container benefits">
         <article class="benefit__single benefit--macbook">
             <div class="benefit__text benefit__text--macbook">
@@ -85,6 +84,66 @@
                 <img src="/img/Trumpet.png" alt="trumpet image" srcset="">
             </article>
         </div>
+    </section>
+    <section class="container pricing">
+        <h2>Pricing</h2>
+        <article class="pricing__container">
+            <!-- PRICING BASIC  -->
+            <div class="pricing__single pricing--basic">
+                <div class="pricing__single__text">
+                    <div class="title">
+                        <h3>Basic</h3>
+                        <p class="pricing__number">$0</p>
+                    </div>
+                    <ul class="pricing__list">
+                        <li><div class="li__check li__check--present"></div> 100 MB HDD</li>
+                        <li><div class="li__check li__check--present"></div> 1 Subdomain</li>
+                        <li><div class="li__check li__check--present"></div> 2 E-mails</li>
+                        <li><div class="li__check li__check--absent"></div> Two years license</li>
+                        <li><div class="li__check li__check--absent"></div> Full support</li>
+                    </ul>
+                    <button class="btn btn--basic">Begin</button>
+                </div>
+            </div>
+            <!-- PRICING PROFESSIONAL  -->
+            <div class="pricing__single pricing--professional">
+                <div class="pricing__single__text">
+                    <div class="title">
+                        <h3>Professional</h3>
+                        <p class="pricing__number">$0</p>
+                        <p class="pricing__addition">Limited offer</p>
+                    </div>
+                    <ul class="pricing__list">
+                        <li><div class="li__check li__check--present"></div> 500 MB HDD</li>
+                        <li><div class="li__check li__check--present"></div> 2 Subdomain</li>
+                        <li><div class="li__check li__check--present"></div> 5 E-mails</li>
+                        <li><div class="li__check li__check--present"></div> One year license</li>
+                        <li><div class="li__check li__check--absent"></div> Full support</li>
+                    </ul>
+                    <button class="btn btn--professional">Begin</button>
+                </div>
+            </div>
+            <!-- PRICING PREMIUM  -->
+            <div class="pricing__single pricing--premium">
+                <div class="pricing__single__text">
+                    <div class="title">
+                        <h3>Premium</h3>
+                        <p class="pricing__number">$0</p>
+                        <p class="pricing__addition">Limited offer</p>
+                    </div>
+                    <ul class="pricing__list">
+                        <li><div class="li__check li__check--present"></div> 2 GB HDD</li>
+                        <li><div class="li__check li__check--present"></div> 5 Subdomain</li>
+                        <li><div class="li__check li__check--present"></div> 20 E-mails</li>
+                        <li><div class="li__check li__check--present"></div> Two years license</li>
+                        <li><div class="li__check li__check--present"></div> Full support</li>
+                    </ul>
+                    <button class="btn btn--premium">Begin</button>
+                </div>
+            </div>
+             
+            </div>
+        </article>
     </section>
 
 
