--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </nav>
         </section>
     </header>
+<!-- ===== OPENER =====  -->
     <section class="opener container">
         <div class="opener__text">
                 <h1>Sell More!</h1>
@@ -54,6 +55,7 @@
             </div>
         </article>
     </section>
+<!-- ===== PRICING BASIC =====  -->
     <section class="container benefits">
         <article class="benefit__single benefit--macbook">
             <div class="benefit__text benefit__text--macbook">
@@ -88,7 +90,7 @@
     <section class="container pricing">
         <h2>Pricing</h2>
         <article class="pricing__container">
-            <!-- PRICING BASIC  -->
+<!-- ===== PRICING BASIC ===== -->
             <div class="pricing__single pricing--basic">
                 <div class="pricing__single__text">
                     <div class="title">
@@ -105,7 +107,7 @@
                     <button class="btn btn--basic">Begin</button>
                 </div>
             </div>
-            <!-- PRICING PROFESSIONAL  -->
+<!-- ===== PRICING PROFESSIONAL ===== -->
             <div class="pricing__single pricing--professional">
                 <div class="pricing__single__text">
                     <div class="title">
@@ -123,7 +125,7 @@
                     <button class="btn btn--professional">Begin</button>
                 </div>
             </div>
-            <!-- PRICING PREMIUM  -->
+<!-- ===== PRICING PREMIUM ===== -->
             <div class="pricing__single pricing--premium">
                 <div class="pricing__single__text">
                     <div class="title">
@@ -145,6 +147,50 @@
             </div>
         </article>
     </section>
+<!-- ===== FORM =====  -->
+<section class="container contact">
+    <div class="contact__column">
+        <h2 class="contact__title">Any questions?</h2>
+        <p class="contact__instruction">Leave your email address or call us!</p>
+        <div class="contact__details">
+            <a href="#" class="details__item"><img src="img/Mail%20Icon.svg" alt="mail"/>info@bestshop.xyz</a>
+            <a href="#" class="details__item"><img src="img/Phone%20Icon.svg" alt="phone"/>123 456 789</a>
+        </div>
+    </div>
+    <div class="contact__column">
+        <form class="form">
+            <div class="form__field">
+                <label class="form__label" for="name">Name</label>
+                <input type="text" class="form__input name" id="name" name="name">
+            </div>
+            <div class="form__field">
+                <label class="form__label" for="email">E-mail</label>
+                <input type="email" class="form__input email" id="email" name="email">
+            </div>
+            <div class="form__consent">
+                <!-- zawieramy wszystko w label, po to żeby kliknięcie działało-->
+                <label class="form__checkbox">
+                    <input type="checkbox"/>
+                    <span class="checkbox"></span>
+                    <p class="consent__text">I hereby give consent for my personal data included in my
+                        application to be processed for the purposes of the recruitment
+                        process under the European Parliament’s and Council of the
+                        European Union Regulation on the Protection of Natural Persons as
+                        of 27 April 2016, with regard to the processing of personal data
+                        and on the free movement of such data, and repealing Directive
+                        95/46/EC (Data Protection Directive)
+                    </p>
+                </label>
+            </div>
+            <button type="submit" class="btn btn--primary">Send</button>
+        </form>
+    </div>
+</section>
+<!-- ===== FOOTER =====  -->
+<footer>
+
+</footer>
+
 
 
 
