--- a/index.html
+++ b/index.html
@@ -188,13 +188,17 @@
 </section>
 <!-- ===== FOOTER =====  -->
 <footer>
-
+    <div class="container footer">
+    <div class="footer__info">
+        <a href="#" class="header__logo">BestShop</a>
+        <span class="footer__copy">© 2019 BestShop LTD, All Rights Reserved</span>
+    </div>
+    <div class="footer__icons">
+        <a href="#"><img src="/img/Twitter.jpg" alt="twitter"/></a>
+        <a href="#"><img src="/img/Facebook.png" alt="facebook"/></a>
+    </div>
+    </div>
 </footer>
-
-
-
-
-
     <script type="text/javascript"> </script> <!-- Jesli brakuje skryptow to psuje sie transition -->
 </body>
 </html>
