--- a/index.html
+++ b/index.html
@@ -194,11 +194,13 @@
         <span class="footer__copy">© 2019 BestShop LTD, All Rights Reserved</span>
     </div>
     <div class="footer__icons">
-        <a href="#"><img src="/img/Twitter.jpg" alt="twitter"/></a>
-        <a href="#"><img src="/img/Facebook.png" alt="facebook"/></a>
+        <a href="#"><div class="footer__img"></div></a>
+        <a href="#"><div class="footer__img img--facebook"></div></a>
     </div>
     </div>
 </footer>
-    <script type="text/javascript"> </script> <!-- Jesli brakuje skryptow to psuje sie transition -->
+    <script type="text/javascript"> </script>
+    <!-- Jesli brakuje skryptow to psuje sie transition -->
+    <!-- NIE KOPIUJ KODU, BO POTEM SIĘ NIE ODNAJDZIESZ -->
 </body>
 </html>
