--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    <header>
-        <section class="container">
-            <div class="header__logo">BestShop</div>
-            <nav class="header__nav">
-                <ul>
-                    <li class="nav__element"><a href="" class="nav__link">why us</a></li>
-                    <li class="nav__element"><a href="" class="nav__link">benefits</a></li>
-                    <li class="nav__element"><a href="" class="nav__link">prices</a></li>
-                    <li class="nav__element"><a href="" class="nav__link">contact</a></li>
-                </ul>
-            </nav>
-        </section>
-    </header>
+<!-- <section class="container"> -->
+        <header>
+            <div class="row">
+                <a class="header__logo col-xs-4">
+                    BestShop
+                </a>
+                <nav class="col-sm-8">
+                    <ul>
+                        <li class="nav__element"><a href="" class="nav__link">why us</a></li>
+                        <li class="nav__element"><a href="" class="nav__link">benefits</a></li>
+                        <li class="nav__element"><a href="" class="nav__link">prices</a></li>
+                        <li class="nav__element"><a href="" class="nav__link">contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 <!-- ===== OPENER =====  -->
     <section class="opener container">
         <div class="opener__text">
@@ -34,6 +38,7 @@
         </div>
         <img src="/img/Background.png" alt="background image" class="opener__image">
     </section>
+<!-- ===== STATISTICS =====  -->
     <section class="statistic container">
         <h2>The most popular sales platform in country</h2>
         <article class="statistic__box">
@@ -54,7 +59,7 @@
             </div>
         </article>
     </section>
-<!-- ===== PRICING BASIC =====  -->
+<!-- ===== BENEFITS =====  -->
     <section class="container benefits">
         <article class="benefit__single benefit--macbook">
             <div class="benefit__text benefit__text--macbook">
@@ -146,7 +151,7 @@
             </div>
         </article>
     </section>
-<!-- ===== FORM =====  -->
+<!-- ===== CONTACT =====  -->
 <section class="container contact">
     <div class="contact__column">
         <h2 class="contact__title">Any questions?</h2>
@@ -201,5 +206,6 @@
     <script type="text/javascript"> </script>
     <!-- Jesli brakuje skryptow to psuje sie transition -->
     <!-- NIE KOPIUJ KODU, BO POTEM SIĘ NIE ODNAJDZIESZ -->
+<!-- </section> -->
 </body>
 </html>
