--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 <body>
 <!-- <section class="container"> -->
         <header>
+        <div class="container">
             <div class="row">
-                <a class="header__logo col-xs-4">
-                    BestShop
-                </a>
-                <nav class="col-sm-8">
+                <div class="col-xs-4 col-sm-4">
+                    <a class="header__logo">
+                        BestShop
+                    </a>
+                </div>
+                <nav class="col-xs-1 col-sm-8">
                     <ul>
                         <li class="nav__element"><a href="" class="nav__link">why us</a></li>
                         <li class="nav__element"><a href="" class="nav__link">benefits</a></li>
@@ -28,6 +31,7 @@
                     </ul>
                 </nav>
             </div>
+        </div>
         </header>
 <!-- ===== OPENER =====  -->
     <section class="opener container">
