--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         BestShop
                     </a>
                 </div>
-                <nav class="col-xs-1 col-sm-8">
+                <nav class="col-sm-8">
                     <ul>
                         <li class="nav__element"><a href="" class="nav__link">why us</a></li>
                         <li class="nav__element"><a href="" class="nav__link">benefits</a></li>
