--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 <!-- <section class="container"> -->
-        <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-4 col-sm-4">
+            <header>
+                <div class="small-header">
                     <a class="header__logo">
                         BestShop
                     </a>
+                    <i class="fas fa-bars hamburger"></i>
                 </div>
-                <nav class="col-sm-8">
+                <nav class="header-nav">
                     <ul>
                         <li class="nav__element"><a href="" class="nav__link">why us</a></li>
                         <li class="nav__element"><a href="" class="nav__link">benefits</a></li>
@@ -30,8 +30,6 @@
                         <li class="nav__element"><a href="" class="nav__link">contact</a></li>
                     </ul>
                 </nav>
-            </div>
-        </div>
         </header>
 <!-- ===== OPENER =====  -->
     <section class="opener container">
@@ -207,7 +205,7 @@
     </div>
     </div>
 </footer>
-    <script type="text/javascript"> </script>
+<script src="script.js"></script>
     <!-- Jesli brakuje skryptow to psuje sie transition -->
     <!-- NIE KOPIUJ KODU, BO POTEM SIĘ NIE ODNAJDZIESZ -->
 <!-- </section> -->
