--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
                 </nav>
         </header>
 <!-- ===== OPENER =====  -->
-    <section class="opener container">
+    <section class="opener">
         <div class="opener__text">
                 <h1>Sell More!</h1>
                 <p class="paragraph">Open shop on our platform and increase your sales</p>
                 <a href="#" class="btn btn__large">Open your shop</a>
         </div>
-        <img src="/img/Background.png" alt="background image" class="opener__image">
+        <div class="image">
+            <!-- <img src="/img/Background.png" alt="background image" class="opener__image"> -->
+        </div>
     </section>
 <!-- ===== STATISTICS =====  -->
     <section class="statistic container">
