--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 </head>
 <body>
 <!-- <section class="container"> -->
-            <header>
-                <div class="small-header">
-                    <a class="header__logo">
-                        BestShop
-                    </a>
-                    <i class="fas fa-bars hamburger"></i>
-                </div>
-                <nav class="header-nav">
-                    <ul>
-                        <li class="nav__element"><a href="" class="nav__link">why us</a></li>
-                        <li class="nav__element"><a href="" class="nav__link">benefits</a></li>
-                        <li class="nav__element"><a href="" class="nav__link">prices</a></li>
-                        <li class="nav__element"><a href="" class="nav__link">contact</a></li>
-                    </ul>
-                </nav>
-        </header>
+<header>
+    <div class="small-header">
+        <a class="header__logo">
+             BestShop
+         </a>
+            <i class="fas fa-bars hamburger"></i>
+     </div>
+    <nav class="header-nav">
+        <ul>
+            <li class="nav__element"><a href="" class="nav__link">why us</a></li>
+            <li class="nav__element"><a href="" class="nav__link">benefits</a></li>
+            <li class="nav__element"><a href="" class="nav__link">prices</a></li>
+            <li class="nav__element"><a href="" class="nav__link">contact</a></li>
+        </ul>
+    </nav>
+</header>
 <!-- ===== OPENER =====  -->
     <section class="opener">
         <div class="opener__text">
                 <h1>Sell More!</h1>
                 <p class="paragraph">Open shop on our platform and increase your sales</p>
-                <a href="#" class="btn btn__large">Open your shop</a>
+                <a href="#" class="btn__large">Open your shop</a>
         </div>
         <div class="image">
             <!-- <img src="/img/Background.png" alt="background image" class="opener__image"> -->
         </div>
     </section>
 <!-- ===== STATISTICS =====  -->
-    <section class="statistic container">
+    <section class="statistic">
         <h2>The most popular sales platform in country</h2>
         <article class="statistic__box">
             <div class="single__stat">
