--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </article>
     </section>
 <!-- ===== BENEFITS =====  -->
-    <section class="container benefits">
+<section class="benefits">
         <article class="benefit__single benefit--macbook">
             <div class="benefit__text benefit__text--macbook">
                 <h2>Be always first</h2>
@@ -76,7 +76,7 @@
         </article>
         <article class="benefit__single benefit--iphone">
             <div class="benefit__text benefit__text--iphone">
-                <h2>Be always first</h2>
+                <h2>Your shop is where you are!</h2>
                 <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
             <div class="benefit__image">
@@ -86,7 +86,7 @@
         <div class="benefit__double">
             <article class="benefit__single benefit__single--trumpet">
                 <div class="benefit__text benefit__text--trumpet">
-                    <h2>Be always first</h2>
+                    <h2>Increase recognition of your brand!</h2>
                     <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 </div>
             </article>
@@ -94,8 +94,9 @@
                 <img src="/img/Trumpet.png" alt="trumpet image" srcset="">
             </article>
         </div>
-    </section>
-    <section class="container pricing">
+</section>
+
+    <section class="pricing">
         <h2>Pricing</h2>
         <article class="pricing__container">
 <!-- ===== PRICING BASIC ===== -->
@@ -156,7 +157,7 @@
         </article>
     </section>
 <!-- ===== CONTACT =====  -->
-<section class="container contact">
+<section class=" contact">
     <div class="contact__column">
         <h2 class="contact__title">Any questions?</h2>
         <p class="contact__instruction">Leave your email address or call us!</p>
